# StellarEscrowlevel5.0

./: .gitignore  Cargo.toml  README.md  StellarEscrow_Pitch_Deck.pptx  TRANSACTIONS_PROOF.md  create_pitch_deck.py  submit_feedback.js
.github/workflows/: ci.yml  deploy.yml
backend/: package-lock.json  package.json  server.js
contracts/escrow_contract/: Cargo.toml
contracts/escrow_contract/src/: lib.rs  test.rs
contracts/escrow_contract/test_snapshots/test/: test_client_refund_on_expiry.1.json  test_dispute_and_resolve_to_client.1.json  test_dispute_and_resolve_to_freelancer.1.json  test_freelancer_voluntary_refund.1.json  test_happy_path.1.json  test_unauthorized_actions.1.json
frontend/: package-lock.json  package.json  simulate.js
frontend/src/: App.tsx  index.css
frontend/src/services/: contractService.ts
